--- a/src/main/resources/put/sk/publish/login.fxml
+++ b/src/main/resources/put/sk/publish/login.fxml
@@ -19,7 +19,7 @@
                </font>
             </Label>
             <Separator layoutX="27.0" layoutY="113.0" prefHeight="9.0" prefWidth="200.0" />
-            <Button fx:id="buttonReset" layoutX="18.0" layoutY="236.0" mnemonicParsing="false" onMouseClicked="#clickReset" prefHeight="27.0" prefWidth="218.0" text="Reset" />
+            <Button fx:id="buttonReset" layoutX="18.0" layoutY="236.0" mnemonicParsing="false" onAction="#onReset" prefHeight="27.0" prefWidth="218.0" text="Reset" />
             <TextField fx:id="inputIP" layoutX="28.0" layoutY="43.0" prefHeight="27.0" prefWidth="200.0" promptText="Server IP / Domain" />
             <TextField fx:id="inputPort" layoutX="28.0" layoutY="79.0" prefHeight="27.0" prefWidth="200.0" promptText="Port" />
             <TextField fx:id="inputUsername" layoutX="28.0" layoutY="135.0" prefHeight="27.0" prefWidth="200.0" promptText="Username" />
