--- a/src/main/resources/put/sk/publish/login.fxml
+++ b/src/main/resources/put/sk/publish/login.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="269.0" prefWidth="242.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="put.sk.publish.Login">
+<AnchorPane prefHeight="269.0" prefWidth="242.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="put.sk.publish.LoginView">
    <children>
       <Pane prefHeight="291.0" prefWidth="254.0">
          <children>
