--- a/src/main/resources/put/sk/publish/main.fxml
+++ b/src/main/resources/put/sk/publish/main.fxml
@@ -23,9 +23,9 @@
                         <Font name="Courier" size="13.0" />
                      </font>
                   </Label>
-                  <TextArea fx:id="areaArticleText" editable="false" layoutX="10.0" layoutY="34.0" prefHeight="166.0" prefWidth="434.0" />
+                  <TextArea fx:id="areaArticleText" layoutX="10.0" layoutY="34.0" prefHeight="166.0" prefWidth="434.0" />
                </children></AnchorPane>
-            <Button fx:id="buttonRead" disable="true" layoutX="486.0" layoutY="67.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="155.0" text="Read article">
+            <Button fx:id="buttonRead" disable="true" layoutX="486.0" layoutY="67.0" mnemonicParsing="false" onAction="#onReadArticle" prefHeight="27.0" prefWidth="155.0" text="Read article">
                <font>
                   <Font name="Courier Oblique" size="13.0" />
                </font></Button>
@@ -42,7 +42,7 @@
             </Label>
             <ListView fx:id="listArticle" layoutX="256.0" layoutY="32.0" prefHeight="200.0" prefWidth="200.0" />
             <Separator layoutX="15.0" layoutY="247.0" prefHeight="2.0" prefWidth="445.0" />
-            <TextField fx:id="inputArticleTitle" editable="false" layoutX="23.0" layoutY="461.0" prefHeight="27.0" prefWidth="434.0" promptText="Article title" />
+            <TextField fx:id="inputArticleTitle" layoutX="23.0" layoutY="461.0" prefHeight="27.0" prefWidth="434.0" promptText="Article title" />
             <Button fx:id="buttonSend" disable="true" layoutX="486.0" layoutY="280.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="155.0" text="Send article">
                <font>
                   <Font name="Courier Oblique" size="13.0" />
@@ -53,7 +53,7 @@
                   <Font name="Courier Oblique" size="13.0" />
                </font>
             </Button>
-            <Button fx:id="buttonWrite" disable="true" layoutX="486.0" layoutY="102.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="155.0" text="Write new article">
+            <Button fx:id="buttonWrite" layoutX="486.0" layoutY="102.0" mnemonicParsing="false" onAction="#onWriteNewArticle" prefHeight="27.0" prefWidth="155.0" text="Write new article">
                <font>
                   <Font name="Courier Oblique" size="13.0" />
                </font>
@@ -71,6 +71,11 @@
                      </font></Label>
                </children></AnchorPane>
             <Button fx:id="buttonLoadArticles" layoutX="486.0" layoutY="32.0" mnemonicParsing="false" onAction="#onLoadArticles" prefHeight="27.0" prefWidth="155.0" text="Load articles">
+               <font>
+                  <Font name="Courier Oblique" size="13.0" />
+               </font>
+            </Button>
+            <Button fx:id="buttonCancel" layoutX="486.0" layoutY="352.0" mnemonicParsing="false" onAction="#onCancelSend" prefHeight="27.0" prefWidth="155.0" text="Cancel" visible="false">
                <font>
                   <Font name="Courier Oblique" size="13.0" />
                </font>
